@@ -6,15 +6,15 @@ class ArticleDrop < BaseDrop
   def initialize(source, options = {})
     @options        = options
     @source         = source
-    @site           = options.delete(:site)
+    @site           = options.delete(:site) || @source.site
     @article_liquid = { 
       'id'               => @source.id,
       'title'            => @source.title,
       'permalink'        => @source.permalink,
       'body'             => @source.body_html,
       'excerpt'          => @source.excerpt_html,
-      'published_at'     => (@site.timezone.utc_to_local(@source.published_at) rescue nil),
-      'updated_at'       => (@site.timezone.utc_to_local(@source.updated_at)   rescue nil),
+      'published_at'     => (@source.published_at ? @site.timezone.utc_to_local(@source.published_at) : nil),
+      'updated_at'       => (@source.updated_at   ? @site.timezone.utc_to_local(@source.updated_at)   : nil),
       'comments_count'   => @source.comments_count,
       'author'           => @source.user.to_liquid,
       'accept_comments'  => @source.accept_comments?,
